--- a/01gy_cpp/01gy_cpp.tex
+++ b/01gy_cpp/01gy_cpp.tex
@@ -5,7 +5,8 @@
 \usepackage[T1]{fontenc}
 \PassOptionsToPackage{defaults=hu-min}{magyar.ldf}
 \usepackage[magyar]{babel}
-\usepackage{amsmath, xcolor, amsthm,amssymb,paralist,array, ellipsis, graphicx}
+\usepackage{amsmath, xcolor, amsthm,amssymb,paralist,array, ellipsis, graphicx, tikz}
+\usetikzlibrary{shapes.geometric, arrows, positioning}
 %\usepackage{marvosym}
 
 \usepackage{listings}
@@ -100,43 +101,45 @@
 		
 		1. óra
 	\end{center}
-	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor gzakorlatán. (\today)
+	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor gyakorlatán. (\today)
 	\section{Bevezető}
 	A C++ többek között a hatákonyságáról is híres. Andrei Alexandrescu azt nyilatkozta, hogy amikor a Facebooknál a backend kódján 1\%ot sikerült optimalizálni, több mint 10 évnyi fizetését spórolta meg a cégnek havonta csak az áramköltségen. Nem használ garbage collectort: nincs nem várt szünet a program végrehajtásában a menedzselt nyelvekkel szemben.
 	
 	\medskip
 	Cél: a tárgy során kialakítani a nyelvvel kapcsolatban egy intuíciót, ami segítéségével elkerülhetőek alapvető hibák is. Az előzménytárgyakban az egyszerűség kedvéért gyakran féligazságok hangzottak el, ezeket is helyre kell rakni.
 	\subsection{Mi az a C++?}
-  Alapvetően a nyelv két összetevőből áll. Az aktuális szabványból és annak implementációiból (fordítók + szabványkönyvtárak). A szabvány, ami meghatározza a nyelv nyelvtanját, valamint azt, hogy mit jelentenek a leforduló programok (többé kevésbé). Emellett a szabvány definiálja a szabványkönyvtárat is, amit mindan szabványos C++ fordító mellé szállítani kell.. Az első C++ szabvány a {C++98} volt. További szabványai: {C++03}, {C++11}, {C++14}, {C++17}.
+  Alapvetően a nyelv két összetevőből áll. Az aktuális szabványból és annak implementációiból (fordítók + szabványkönyvtárak). A szabvány, ami meghatározza a nyelv nyelvtanját, valamint azt, hogy mit jelentenek a leforduló programok (többé kevésbé). Emellett a szabvány definiálja a szabványkönyvtárat is, amit minden szabványos C++ fordító mellé szállítani kell. Az első C++ szabvány a {C++98} volt. További szabványai: {C++03}, {C++11}, {C++14}, {C++17}.
 	
 	\medskip
   %% TODO linkek.
-  A szabvány alapján számos fordító (implementáció) létezik a C++ kódok fordítására: MSVC (Visual Studio), GCC, Clang. 
-	\section{Első óra}
+  A szabvány alapján számos fordító (implementáció) létezik a C++ kódok fordítására: MSVC (Visual Studio), GCC, Clang.
+  \section{Különböző viselkedések kategorizálása} 
 	\subsection{Nem definiált viselkedések}
-	\begin{example}\ 
-		
-		\begin{lstlisting}
+	\begin{lstlisting}
 int main()
 {
 	int i = 0;
 	std::cout << ++i << ++i << std::endl;
 }
-		\end{lstlisting}
-		
-		Lefordítás és futtatás után különböző eredményeket kaphatunk, mert itt az, hogy mikor értékelődik ki a két \texttt{++i} a kifejezésen belül, az \textbf{nem specifikált.} Ha a szabvány nem terjed ki arra, hogy milyen kódot generáljon a fordító, akkor a fordító bármit választhat. 
-		
-		\medskip
-		Gyakran eldönthetetlen előre, hogy mikor mi lesz a legmegfelelőbb megoldás, ezért nem definiál mindent a szabvány.
-		
-		\medskip
-		Ez lehetőséget ad a fordítónak arra, hogy \textbf{optimalizáljon.} 
-	\end{example}
+	\end{lstlisting}
+	Lehetséges kimenet: \texttt{01} (GCC fordítóval)
+	
+	Lehetséges kimenet: \texttt{10} (Clang fordítóval)
+	\medskip
+	
+	Lefordítás és futtatás után különböző eredményeket kaphatunk, mert itt az, hogy mikor értékelődik ki a két \texttt{++i} a kifejezésen belül, az \textbf{nem specifikált.} Ha a szabvány nem terjed ki arra, hogy milyen kódot generáljon a fordító, akkor a fordító bármit választhat. 
+	\medskip
+	
+	Gyakran eldönthetetlen előre, hogy mikor mi lesz a legmegfelelőbb megoldás, ezért nem definiál mindent a szabvány.
+	\medskip
+	
+	Ez lehetőséget ad a fordítónak arra, hogy \textbf{optimalizáljon.} 
+	\medskip
+	
+	A C++ban van un. szekvenciapontok, és a szabvány csak azt mondja ki, hogy a szekvenciapont előtti kód hamarabb kerüljön végrehajtásra mint az utánalevő.  Mivel itt az \textit{i} értékadása után és csak az \texttt{std::endl} után van szekvenciapont, így az, hogy milyen sorrendben történjen a kettő közötti kifejezés részkifejezéseinek a kiértékelése, az a fordítóra van bízva.
+	\medskip
 	
 	A C++ban nem meghatározott, hogy két szekvenciapont között mi az utasítások végrehajtásának a sorrendje.
-	
-	\medskip
-	A C++ban van un. szekvenciapontok, és a szabvány csak azt mondja ki, hogy a szekvenciapont előtti kód hamarabb kerüljön végrehajtásra mint az utánalevő.  Mivel itt az \textit{i} értékadása után és csak az \texttt{std::endl} után van szekvenciapont, így az, hogy milyen sorrendben történjen a kettő közötti kifejezés részkifejezéseinek a kiértékelése, az a fordítóra van bízva.
 	
 	\medskip
 	Az, hogy két részkifejezés szekvenciaponttal történő elválasztás nélkül ugyanazt a memóriaterületet módosítha, \textbf{nem definiált} viselkedést eredményez. Nem definiált viselkedés esetén a fordító vagy a futó program bármit csinálhat. A szabvány semmiféle megkötést nem alkalmaz.
@@ -155,124 +158,247 @@ int main()
 {
 	int i = 0;
 	int j = 0;
-	std::cout << ++i << ++j << std::endl;
+	std::cout << ++i << ++j << std::endl; // 11
 }
 		\end{lstlisting}
 	\end{example}
-	Bár azt továbbra se tudjuk, hogy \texttt{++i} vagy \texttt{++j} értékelődik ki hamarabb, (\textit{nem specifikált}), de azt biztosan tudjuk, hogy 11-et fog kiírni (a program végeredménye jól \textit{definiált}).
+	Bár azt továbbra se tudjuk, hogy \texttt{++i} vagy \texttt{++j} értékelődik ki hamarabb, (\textit{nem specifikált}), de azt biztosan tudjuk, hogy 11-et fog kiírni (a program végeredménye \textit{jól definiált}).
+	\subsection{Implementáció által definiált dolgok}
+	A szabvány nem köti meg, hogy egy \texttt{int} egy adott platformon mennyi byte-ból álljon. Ez állandó, egy adott platformon egy adott fordító mindig ugyanakkorát hoz létre, de platform/fordítóváltás esetén ez változhat.
 	
 	\section{A fordító működése}
+	A fordítás 3 fő lépésből áll:
+	\begin{compactenum}
+		\item Preprocesszálás
+		\item Fordítás (A tárgykód létrehozása)
+		\item Linkelés (Szerkesztés)
+	\end{compactenum}
 	
 	\begin{center}
-		$\begin{matrix}
-    &\fbox{\text{header állomány}}\\
-		&\swarrow\searrow&\\
-    \fbox{\text{cpp fájl}}&&\fbox{\text{cpp fájl}}\\
-		\downarrow&&\downarrow\\
-		\fbox{Fordítási egység}&&\fbox{Fordítási egység}\\
-		\downarrow&&\downarrow\\
-		\fbox{Tárgykód}&&\fbox{Tárgykód}\\
-		&\searrow\swarrow&\\
-		&\fbox{Végrehajtható állomány}&
-	\end{matrix}$
+		\begin{tikzpicture}
+		\tikzstyle{Node} = [rectangle, minimum width=3cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{FileName} = [rectangle, minimum width=3cm, minimum height=5mm, text centered, draw=black, fill= white]
+		\tikzstyle{NodeExe} = [rectangle, minimum width=4cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{FileNameExe} = [rectangle, minimum width=4cm, minimum height=5mm, text centered, draw=black, fill= white]
+		\tikzstyle{arrow} = [thick,->,>=stealth]
+		
+		
+		\node (header) [Node] {Header állomány};
+		\node (headerFileName) [FileName, below = 0mm of header] {\texttt{.h} / \texttt{.hpp}};
+		
+		\node (cpp1) [Node, below left = of header] {Cpp fájl};
+		\node (cpp1FileName) [FileName, below = 0mm of cpp1] {\texttt{.c} / \texttt{.cpp}};
+		
+		\node (cpp2) [Node, below right = of header] {Cpp fájl};
+		\node (cpp2FileName) [FileName, below = 0mm of cpp2] {\texttt{.c} / \texttt{.cpp}};
+		
+		\node (translationUnit1) [Node, below = of cpp1] {Fordítási egység};
+		\node (translationUnit1FileName) [FileName, below = 0mm of translationUnit1] {\texttt{.c} / \texttt{.cpp}};
+		
+		\node (translationUnit2) [Node, below = of cpp2] {Fordítási egység};
+		\node (translationUnit2FileName) [FileName, below = 0mm of translationUnit2] {\texttt{.c} / \texttt{.cpp}};
+		
+		\node (objectFile1) [Node, below = of translationUnit1] {Tárgykód};
+		\node (objectFile1FileName) [FileName, below = 0mm of objectFile1] {\texttt{.o}};
+		
+		\node (objectFile2) [Node, below = of translationUnit2] {Tárgykód};
+		\node (objectFile2FileName) [FileName, below = 0mm of objectFile2] {\texttt{.o}};
+		
+		\node (exe) [NodeExe, below = 5.8 cm of header] {Végrehajtható állomány};
+		\node (exeFileName) [FileNameExe, below = 0mm of exe] {\texttt{.exe} / \texttt{.out}};
+		
+		
+		\draw[arrow] (headerFileName) -- (cpp1);
+		\draw[arrow] (headerFileName) -- (cpp2);
+		\draw[arrow] (cpp1FileName) -- (translationUnit1);
+		\draw[arrow] (cpp2FileName) -- (translationUnit2);
+		\draw[arrow] (translationUnit1FileName) -- (objectFile1);
+		\draw[arrow] (translationUnit2FileName) -- (objectFile2);
+		\draw[arrow] (objectFile1FileName) -- (exe);
+		\draw[arrow] (objectFile2FileName) -- (exe);
+		
+		\end{tikzpicture}
+		\smallskip
+		
+		Szürkében az adott fordítási lépés neve, alatta az így létrehozott fájl kiterjesztése (leggyakrabban).	
 	\end{center}
-	\begin{compactitem}
-		\item Preprocesszálás
-    \item Fordítás (A tárgykód létrehozása)
-    \item Linkelés (Szerkesztés)
-	\end{compactitem}
-	\subsection{Preprocesszor}
-	A preprocessor használata a legtöbb esetben kerülendő. Ez alól kivétel a header állományok include-olása. A preprocesszor \textbf{primitív} szabályok alapján dolgozik és \textbf{nyelvfüggetlen.} Mivel semmit nem tud a C++-ról, ezért sokszor a fejlesztő számára meglepő viselkedést okozhat a használata.
-	\begin{example}\ 
-		alma.h
-		\begin{lstlisting}
+	A fordítás a preprocesszor parancsok végrehajtásával kezdődik (például a \textbf{header fájl}ok beillesztése a \textbf{cpp fájl}okba), az így kapott fájlot hívjuk \textbf{fordítási egység}nek (\textit{translation unit}). A fordítási egységek külön-külön fordulnak \textbf{tárgykód}dá (\textit{object file}). Ahhoz hogy a tárgykódokból \textbf{futtatható állomány}t (\texttt{executable file}) lehessen készíteni, össze kell linkelni őket.
+	\medskip
+	
+	A következő pár szekcióban megismerjük a fenti 3 lépést alaposabban.
+	
+	\subsection{Preprocesszálás}
+	A preprocesszor (vagy előfeldolgozó) használata a legtöbb esetben kerülendő. Ez alól kivétel a header állományok include-olása. A preprocesszor \textbf{primitív} szabályok alapján dolgozik és \textbf{nyelvfüggetlen.} Mivel semmit nem tud a C++-ról, ezért sokszor a fejlesztő számára meglepő viselkedést okozhat a használata.
+	
+	A következőkben valamennyi preprocesszor paranccsal meg fogunk ismerkedni. Minden preprocesszor parancs \texttt{\#} jellel kezdődik, majd a preprocesszálás befejeztével ezek kivágásra kerülnek a fájlból.
+	\bigskip
+	
+	\fbox{\textbf{alma.h}}
+	\begin{lstlisting}
 #define ALMA 5
 
 ALMA ALMA ALMA
-		\end{lstlisting}
-		Az előfeldolgozott szöveget a \texttt{cpp alma.h} parancs kiadása segítségével tekinthetjük meg.
-		
-		Az előfeldolgozás eredménye: \texttt{5 5 5}.
-	\end{example}
-	\begin{example}\
-		
-		\begin{lstlisting}
+	\end{lstlisting}
+	A \texttt{\#define ALMA 5}  parancs azt jelenti, hogy minden \texttt{ALMA} szót ki kell a fájlban \texttt{5}-re.
+	
+	Az előfeldolgozott szöveget a \texttt{cpp alma.h} parancs kiadása segítségével tekinthetjük meg.
+	
+	Az így kapott fájlból kiolvasható előfeldolgozás eredménye: \texttt{5 5 5}.
+	\bigskip
+	
+	\fbox{\textbf{alma.h}}
+	\begin{lstlisting}
 #define KORTE
 
 #ifdef KORTE
-MEGVAN
+	MEGVAN
 #else
-KORTE
+	KORTE
 #endif
-		\end{lstlisting}
-		Kimenetben csak az van benne, hogy MEGVAN.
-	\end{example}
+	\end{lstlisting}
+	A fent leírtakon kívül a \texttt{\#define} hatására a preprocesszor az első argumentumot makrónak fogja tekinteni. A fenti kódban rákérdezünk, hogy ez a \texttt{KORTE} makró definiálva van-e (az \texttt{\#ifdef} paranccsal), és mivel ezt fent megtettük, \texttt{\#else}-ig (vagy annak hiányában \texttt{\#endif}-ig) minden beillesztésre kerül, ímenetben csak annyi fog szerepelni, hogy \texttt{MEGVAN}.
+	\bigskip
 	
-	\begin{example}\
-		
-		\begin{lstlisting}
+	\fbox{\textbf{alma.h}}
+	\begin{lstlisting}
 #define KORTE
-
 #undef KORTE
 
 #ifdef KORTE
-MEGVAN
+	MEGVAN
 #else
-KORTE
+	KORTE
 #endif
-		\end{lstlisting}
-		Itt a kimenetben KORTE lesz.
-	\end{example}
-	Az előfeldolgozót kódrészletek kivágására is lehet hasnzálni. A kimenetben viszont a megfelelő direktívákból visszaállítható az eredeti sorszám.
-	\begin{note}\
-		\texttt{g++ -save-temps hello.cpp} $\rightarrow$ A fordítás köztes fázísainak a kimentése.
-	\end{note}
-	Mivel az \texttt{include}-ok szöveg szerinti beillesztést jelentenek, nagyon jelentősen meg tudják növelni a kód méretét, ami a fordítást lassítja. Ezért óvatosan kell vele bánni.
-	\begin{example}\ 
-		pp.h
-		\begin{lstlisting}
-#include "pp.h"
-		\end{lstlisting}
-	\end{example}
-		
-	Rekurzív inlcude-nál az előfeldolgozó egy bizonyos mélység limit után leállítja a preprocesszálást.
+	\end{lstlisting}
+	Az \texttt{\#undef} paranccsal a paraméterként megadott makrót a preprocesszor nem tekinti továbbá makrónak, így a kimenetben \texttt{KORTE} lesz.
 	
-  Sok és hosszú include láncok esetén nehéz megakadályozni, hogy kör kerüljön az include gráfba (rekurzív include-ok).
+	Látható, hogy az előfeldolgozót kódrészletek kivágására is lehet használni. 
+	%A kimenetben viszont a megfelelő direktívákból visszaállítható az eredeti sorszám. what???
 	\begin{note}
-		\texttt{\#define KORTE ALMA} jelentése: \texttt{KORTE} cseréje \texttt{ALMA}-ra.
+		 A fordítás közbeni ideiglenes fájlokat a \texttt{g++ -save-temps hello.cpp} paranccsal lehet lementeni.
 	\end{note}
-	\begin{example}\ 
+	A már bizonyára ismerős \texttt{\#include} egy paraméterént megadott fáj tartalmát illeszti be egy az egyben az adott fájlba, és így nagyon jelentősen meg tudják növelni a kód méretét, ami a fordítást lassítja. Ezért óvatosan kell vele bánni.
+	\bigskip
+	
+	\fbox{\textbf{pp.h}}
+	\begin{lstlisting}
+#include "pp.h"
+	\end{lstlisting}
 		
-		pp.h
-		\begin{lstlisting}
+	Rekurzív include-nál, mint a fenti példában, az előfeldolgozó egy bizonyos mélységi limit után leállítja a preprocesszálást.
+	
+	Sok és hosszú include láncok esetén azonban nehéz megakadályozni, hogy kör kerüljön az include gráfba, így akaratlanul is a rekurzív include-ok aldozatai lehetünk.
+	\bigskip
+	
+	\fbox{\textbf{pp.h}}
+	\begin{lstlisting}
 #ifndef _PP_H_
 #define _PP_H_
 
-FECSKE
+	FECSKE
 
 #endif
-		\end{lstlisting}
-		
-		alma.h
-		\begin{lstlisting}
-#include "pp.h"
-#include "pp.h"
-#include "pp.h"
-#include "pp.h"
-#include "pp.h"
-		\end{lstlisting}
-	\end{example}
+	\end{lstlisting}
 	
-	Egy trükk segítségével megakadályozhatjuk azt, hogy többször be legyen illesztve \texttt{FECSKE}. Itt először megnézzük, hogy \texttt{\_PP\_H\_} szimbólum definiálva van-e. Ha nincs, definiáljuk. Mikor legközelebb ezt meg akarnánk tenni, nem illesztjük be a \texttt{FECSKE}-t, mert \texttt{\#ifndef \_PP\_H\_} kivágja azt a szövegrészt.
+	\fbox{\textbf{alma.h}}
+	\begin{lstlisting}
+#include "pp.h"
+#include "pp.h"
+#include "pp.h"
+#include "pp.h"
+#include "pp.h"
+	\end{lstlisting}
 	
-  Ez az úgy nevezett \textbf{header guard} vagy \textbf{include guard.}
+	Egy trükk segítségével megakadályozhatjuk azt, hogy többször be legyen illesztve \texttt{FECSKE}. Először megnézzük, hogy \texttt{\_PP\_H\_} szimbólum definiálva van-e. Ha nincs, definiáljuk. Mikor legközelebb ezt meg akarnánk tenni (a második \texttt{\#include "pp."} sornál), nem illesztjük be a \texttt{FECSKE}-t, mert \texttt{\#ifndef \_PP\_H\_} kivágja azt a szövegrészt.
+	
+	Ez az úgy nevezett \textbf{header guard} vagy \textbf{include guard.}
 	
 	\medskip
-	A preprocesszor az itt bemutatottaknál sokkal többet tud, de általában nem érdemes túlhasználni.
-	\subsection{Fordítás}
-	\begin{example}\
+	A preprocesszor az itt bemutatottaknál sokkal többet tud, de általában nem érdemes túlhasználni a fent említett okok miatt.
+	
+	\subsection{Linkelés}
+	\bigskip
+	
+	\fbox{\textbf{fecske.cpp}}
+	\begin{lstlisting}
+void fecske() {}
+	\end{lstlisting}
+	\bigskip
+	
+	\fbox{\textbf{main.cpp}}
+	\begin{lstlisting}
+int main()
+{
+	fecske();
+}
+	\end{lstlisting}
 		
-		\begin{lstlisting}
+	Ez nem fog lefordulni, mert vagy csak a main.cpp-t, vagy a fecske.cpp-t látja a fordító, egyszerre a két fájlt nem. Megoldás az ha \textbf{forward deklarálunk}, \texttt{void fecske();}-t beillesztjük a main függvény felé, mely jelzi a fordítónak, hogy a \texttt{fecske} az egy függvény, \texttt{void} a visszatérési értéke és nincs paramétere. 
+	\medskip
+	
+	Ekkor \texttt{g++ main.cpp} paranccsal történő fordítás a linkelési fázisánál kapunk hibát, mert nem találja a \texttt{fecske} függvény definícióját. Ezt ahogy korábban is le volt írva, úgy tudjuk megoldani, ha \texttt{main.cpp}-ből és \texttt{fecske.cpp}-ből is tárgykódot készítünk, majd összelinkeljük őket. \texttt{main.cpp}-ben lesz egy hivatkozás egy olyan \texttt{fecske} függvényre, melynek \texttt{void} a visszatérési értéke és paramétere nincs, és \texttt{fecske.cpp} fogja tartalmazni e függvény definícióját. 
+		
+    {\centering\texttt{g++ -c main.cpp}\par}
+
+	{\centering\texttt{g++ -c fecske.cpp}\par}
+
+	A fenti paranccsal lehet tárgykódot előállítani.
+	
+	{\centering\texttt{g++ main.o fecske.o}\par}
+	
+	Ezzel a paranccsal pedig az eredményül kapott tárgykódokat lehet összelinkelni. Rövidebb, ha egyből a cpp fájlokat adjuk meg a fordítónak, így ezt a folyamatot egy sorral letudhatjuk..
+
+	{\centering\texttt{g++ main.cpp fecske.cpp} \par}
+	
+	Ha a \texttt{fecske.cpp}-ben sok függvény van, akkor nem célszerű egyesével forward deklarálni őket minden egyes fájlban, ahol használni szeretnénk ezeket a függvényeket. Ennél egyszerűbb egy header fájl megírása, amiben deklaráljuk a \texttt{fecske.cp}p függvényeit.
+	\bigskip
+	
+	\fbox{\textbf{fecske.h}}
+	%a függvény csak az átláthatóság végett lett bejjebb húzva
+	\begin{lstlisting}
+#ifndef _FECSKE_H_
+#define _FECSKE_H_
+	void fecske();
+#endif
+	\end{lstlisting}
+	Ilyenkor elég a \texttt{fecske.h}-t includeolni.
+	\medskip
+	
+	\textbf{Függvény definíció}nak nevezzük azt, amikor megmondjuk a függvénynek hogy mit csináljon. Egyben deklaráció is.
+	\medskip
+	
+	\textbf{Függvény deklaráció}nak nevezzük azt, amikor függvény használatáról adunk információt. A paraméterek típúsáról, visszatérési értékről és a függvény nevéről.
+	\medskip
+	
+	Szokás a fecske.h-t a fecske.cpp-be is includeolni, mert ha véletlenül ellent mondana egymásnak a definíció a cpp fájlban és a deklaráció a header fájlban akkor a fordító hibát fog jelezni.
+	
+	Bármit lehet bármennyiszer deklarálni, azonban ha azok ellentmondanak egymásnak, akkor fordítási hibát kapunk. Definiálni viszont mindent pontosan egyszer kell. Több definíció vagy a definíció hiánya problémát okozhat. Ezt az elvet szokás \textbf{One Definition Rule}-nak, vagy röviden \textbf{(ODR)}-nek hívni.
+	\bigskip
+	
+	\fbox{\textbf{fecske.h}}
+	\begin{lstlisting}
+#ifndef _FECSKE_H_
+#define _FECSKE_H_
+	void fecske();
+	int macska() {}
+#endif
+	\end{lstlisting}
+		
+	Ha több fordítási egységből álló programot fordítunk, melyek tartalmazzák a \texttt{fecske.h} headert, akkor a preprocesszor több macska függvény definíciót csinál, és linkeléskor a linker azt látja, hogy egy függvény többször van definiálva, és ez linkelési hibát eredményez.
+	\begin{note}
+		A header fájlokba nem szabad definíciókat rakni (bár kivétel létezik, pl. template-ek, inline függvények, melyekről később lesz szó).
+	\end{note}
+	
+	\section{Optimalizálás}
+	A fordításnál bekapcsolhatunk optimalizációkat, a GCC-nél pl. így:
+	
+	{\centering \texttt{g++ hello.cpp -O2} \par}
+	
+	Az \texttt{-O2} paraméter a kettes szintű optimalizációk kapcsolja be. Alapértelmezetten nincs optimalizáció (\texttt{-O0}), és egészen \texttt{-O3}-ig lehet fokozni azt.
+	\bigskip
+	
+	\fbox{\textbf{hello.cpp}}
+	\begin{lstlisting}
 int factorial(int n)
 {
 	if (n <= 0) return 1;
@@ -283,144 +409,139 @@ int main()
 {
 	std::cout << factorial(5) << std::endl;
 }
-		\end{lstlisting}
-		
-		Az optimalizálatlan assembly kódból látható, hogy 5-el lett meghívva a faktoriális függvény.
-		\begin{note}
-			\texttt{g++ -save-temps hello.cpp -O2}
-			
-			2-es szintű optimalizálás bekapcsolása.
-		\end{note}
-		
-     Az optimalizált assembly kódból kiolvasható, hogy a kód (kellően friss gcc-vel) a faktoriális kiszámolása helyett a végeredményt (120at) tartalmazza. Így, mivel az eredmény már fordítási időben kiszámolásra került, futási időben nem kell ezzel plusz időt tölteni.
-		
-		A fordító sokat \textbf{optimalizál.} Az optimalizáció során a szabványos és csak definiált viselkedést tartalmazó kód jelentése nem változhat, viszont sokkal hatékonyabbá válhat.
-	\end{example} 
-	\begin{note}
-		\texttt{-O3} Olyan optimalizálásokat is tartalmazhat, amik agresszívabban kihasználják, ha egy kód nem definiált viselkedéseket tartalmaz.
-		
-		\texttt{-O2} Kevésbé aggresszív, sokszor a nem szabványos kódot se rontja el.
-		
-		Mivel nem definiált viselkedésekre rosszul tud reagálni az \texttt{-O3}, így sokszor elég kockázatos használni.
-	\end{note}
-	
-	\subsection{Linkelés}
-	\begin{example}\ 
-		
-		fecske.cpp
-		\begin{lstlisting}
-void fecske()
-{
-
-}
-		\end{lstlisting}
-		
-		main.cpp
-		\begin{lstlisting}
-int main()
-{
-	fecske();
-	std::cout << factorial(5) << std::endl;
-}
-		\end{lstlisting}
-		
-		Ez nem fog lefordulni, mert vagy csak a main.cpp-t, vagy a fecske.cpp-t látja a fordító, egyszerre a két fájlt nem. Megoldás az ha forward deklarálunk, \texttt{void fecske()}-t beillesztjük a main függvény felé. Ekkor a linkelési fázisánál kapunk hibát, mert nem találja a fecske függvény definícióját.
-		
-    \texttt{g++ -c main.cpp}
-
-		\texttt{g++ -c fecske.cpp}
-
-		Ha linkelés nélkül lefordítom külön a main.cpp-t, a fecske.cpp-t, akkor kapok két object fájlt, és a
-		
-		\texttt{g++ main.o fecske.o}
-		
-    linkeli az eredményül kapott tárgykódokat össze. Rövidebb, ha egyből a cpp fájlokat adjuk meg a fordítónak.
-
-		\texttt{g++ main.cpp fecske.cpp}
-	\end{example}
-	Ha a fecske.cpp-ben sok függvény van, akkor nem célszerű egyesével forward deklarálni őket minden egyes fájlban, ahol használni szeretnénk ezeket a függvényeket. Ennél egyszerűbb egy header fájl megírása, amiben deklaráljuk a fecske.cpp függvényeit.
-	
-	fecske.h
-	\begin{lstlisting}
-#ifndef _FECSKE_H_
-#define _FECSKE_H_
-void fecske();
-#endif
 	\end{lstlisting}
-	Ilyenkor elég a \texttt{fecske.h}-t includeolni.
 	
-	\begin{definition}
-		Függvény definíció: amikor megmondjuk a függvénynek hogy mit csináljon. Egyben deklaráció is.
-	\end{definition}
-	\begin{definition}
-		Függvény deklaráció: a függvény használatáról ad információt. A paraméterek típúsáról, visszatérési értékről és a függvény nevéről.
-  \end{definition}
-	Szokás a fecske.h-t a fecske.cpp-be is includeolni, mert ha véletlenül ellent mondana egymásnak a definíció a cpp fájlban és a deklaráció a header fájlban akkor a fordító hibát fog jelezni.
-	\begin{definition}
-		One Definition Rule (ODR): Bármit lehet bármennyiszer deklarálni, azonban ha azok ellentmondanak egymásnak, akkor fordítási hibát kapunk. Definiálni viszont mindent pontosan egyszer kell. A több definíció vagy a definíció hiánya problémát okozhat.
-	\end{definition}
-	\begin{example}
-		
-		fecske.h
-		\begin{lstlisting}
-#ifndef _FECSKE_H_
-#define _FECSKE_H_
-void fecske();
-int macska() {}
-#endif
-		\end{lstlisting}
-		
-		Ha több fordítási egységből álló programot fordítunk, akkor a preprocesszor több macska függvény definíciót csinál, és linkeléskor a linker azt látja, hogy egy függvény többször van definiálva, és ez linkelési hibát eredményez.
-	\end{example}
+	A \texttt{g++ -save-temps hello.cpp} paranccsal fordítva a temporális fájlokat is meg tudjuk nézni -- hello.s lesz az assembly fájl neve, mely a fordító a kódunk alapján generált. Kiolvasható benne ez a két sor:
+	\begin{lstlisting}
+movl 	$5, (%esp)
+call	__Z9factoriali
+	\end{lstlisting}
 	\begin{note}
-		A header fájlokba nem szabad definíciókat rakni (bár kivétel létezik, pl. template-ek, inline függvények).
+		Az, hogy a fordító milyen assembly kódot alkot az input fájlból, implementációfüggő, ebben az esetben ezt az eredményt kaptuk.
 	\end{note}
-	\subsection{Implementáció által definiált dolgok}
-	A szabvány nem köti meg, hogy egy \textit{int} egy adott platformon mennyi byte-ból álljon. Ez állandó, egy adott platformon egy adott fordító mindig ugyanakkorát hoz létre, de platform/fordítóváltás esetén ez változhat.
-	\section{Féligazságok, hazugságok előzménytárgyakból}
-	\begin{example}
-		A main függvény végrehajtásával kezdődik a program futása?
-		\begin{lstlisting}
-std::ostream& o = std::cout << "Hello";
+	Látható, hogy a \texttt{factorial} függvény 5 paraméterrel meg lett hívva (az hogy pontosan itt mi történik, az lényegtelen).
+	
+	\medskip
+	Amennyiben azonban \texttt{g++ -save-temps hello.cpp -O2} paranccsal fordítunk, az optimalizált assembly kódból kiolvasható, hogy a kód (kellően friss gcc-vel) a faktoriális kiszámolása helyett a végeredményt (120at) tartalmazza. 
+	\begin{lstlisting}
+movl	$120, (%esp)
+	\end{lstlisting}
+	Így, mivel az eredmény már fordítási időben kiszámolásra került, futási időben nem kell ezzel plusz időt tölteni.
+	
+	A fordító sok ehhez hasonló \textbf{optimalizációt} végez. Ennek hatására a szabványos és csak definiált viselkedést tartalmazó kód jelentése nem változhat, viszont sokkal hatékonyabbá válhat.
+	\begin{note}
+		\texttt{-O3} Olyan optimalizálásokat is tartalmazhat, amik agresszívabban kihasználják, ha egy kód nem definiált viselkedéseket tartalmaz, míg az\texttt{-O2} kevésbé aggresszív, sokszor a nem szabványos kódot se rontja el. Mivel nem definiált viselkedésekre rosszul tud reagálni az \texttt{-O3}, így sokszor elég kockázatos használni.
+	\end{note}
+	\section{Globális változók}
+	\subsection{Féligazságok előzménytárgyakból}
+	Előzménytárgyakból azt tanultuk, hogy a program futása a main függvény végrehajtásával kezdődik. Biztosan igaz ez?
+	\begin{lstlisting}
+std::ostream& os = std::cout << "Hello";
 int main()
 {
 	std::cout << "valami";
 }
-		\end{lstlisting}
-		Kimenet: \texttt{Hellovalami}.
-		
-		Tehát ez nem volt igaz. A program végrehajtásánál az első lépés a globális változók inicializálása. Ennek az oka az, ha \texttt{o}-t akarnám használni a main() függvény első sorában, akkor tudjam (lévén elvárás az, hogy egy globális változó bárhol elérhető legyen). Inicializálatlan változó használata pedig nem definiált viselkedés, ezért fontos már a main végrehajtása előtt inicializálni a globálisokat.
-		\begin{lstlisting}
+	\end{lstlisting}
+	Kimenet: \texttt{Hellovalami}.
+	\medskip
+	
+	Tehát ez nem volt igaz. A program végrehajtásánál az első lépés az un. \textbf{globális változók} inicializálása. 
+	
+	Ennek az oka az, hogy a globális változók olyan objektumok, melyekre a program bármely pontján hivatkozni lehet, így ha \texttt{os}-t akarnám használni a \texttt{main} függvény első sorában, akkor ezt meg lehessen tenni. Inicializálatlan változó használata pedig nem definiált viselkedés, ezért fontos már a \texttt{main} végrehajtása előtt inicializálni a globálisokat.
+	\begin{lstlisting}
 int f()
 {
 	return 5;
 }
+
 int x = f();
 
 int main()
 {
 	std::cout << "valami";
 }
-		\end{lstlisting}
-    Itt szintén az \texttt{f()} kiértékelése a \texttt{main} függvény meghívása előtt történik.
-	\end{example}
-	\begin{example}
-		A linkelés nem változatathat a program jelentésén?
-		
-		main.cpp
-		\begin{lstlisting}
+	\end{lstlisting}
+	Itt szintén az \texttt{f()} kiértékelése a \texttt{main} függvény meghívása előtt történik, hogy a globális változót létre lehessen hozni.
+	%TODO névtelen névtér
+	\subsection{Globális változók definíciója és deklarációja}
+	Globális változókat úgy tudunk létrehozni, hogy függvényen és névteren (erről is később) definiáljuk őket.
+	\medskip
+	
+	\fbox{\textbf{main.cpp}}
+	\begin{lstlisting}
+int x;
+
+int main() {}
+	\end{lstlisting}
+	\texttt{x} egy globális változó. Azonban mit tudunk tenni, ha nem csak a \texttt{main.cpp}-ben, hanem egy másik fordítási egységben is szeretnénk rá hivatkozni?
+	\medskip
+	
+	\fbox{\textbf{other.cpp}}
+	\begin{lstlisting}
+int x;
+
+void f() 
+{
+	x = 0;
+}
+	\end{lstlisting}
+	Sajnos ha \texttt{main.cpp}-t és \texttt{other.cpp}-t együtt fordítjuk, fordítási hibát kapunk, ugyanis megsértettük az ODR-t. Ezt úgy tudjuk megoldani, ha \texttt{x}-et forward deklaráljuk az \texttt{extern} kulcsszóval!
+	\medskip
+	
+	\fbox{\textbf{other.cpp}}
+	\begin{lstlisting}
+extern int x;
+
+void f() 
+{
+	x = 0;
+}
+	\end{lstlisting}
+	Csupán annyi a fontos, hogy \texttt{x}-et valamikor definiálni is kell (mely jelenleg a \texttt{main.cpp}-bentalálható).
+	\begin{note}
+		A globális változók deklarációit érdemes külön header fájlba kigyűjteni.
+	\end{note}
+	\subsection{Globális változók inicializációja}
+	A globális változók egyedi módon kapnak kezdőértéket (inicializálódnak). Amennyiben egy nem globális \texttt{int}-et hozunk létre és nem adunk neki kezdőértéket, annak értéke nem definiált lesz (memóriaszemét).
+	\begin{lstlisting}
+int i;
+
+int main() 
+{
+	std::cout << i << std::endl; // 0
+}
+	\end{lstlisting}   
+	Azonban mégis mindig 0-t fog ez a program kiírni. Ennek oka az, hogy a globális változók mindig 0-ra inicializálódnak (legalábbis az \texttt{int}-ek). A globális változókat csak egyszer hozzuk létre a program futásakot, így érdemes jól definiált kezdőértéket adni neki.
+	
+	Azonban a stacken (mellyel hamarosan megismerkedünk) rengetegszer létre kell hozni változókat, nem csak egyszer, így ott nem éri meg minden alkalommal egy jól definiált kezdőértékkel inicializálni. Sokkal nagyobb lenne a hatása a futási időre.
+	
+	Az hogy miért épp 0-ra inicializálódnak, azért van, mert mert az nagyon gyors, és determinisztikus. Így hibákat is egyszerűbb kiszűrni, hisz egy globálisról mindig tudjuk hogy 0-ra inicializál.
+	\subsection{Problémák a globális változókkal}
+	
+	A linkelés vajon eredményezhet nem specifikált viselkedést?
+	\bigskip
+	
+	\fbox{\textbf{main.cpp}}
+	\begin{lstlisting}
 std::ostream& o = std::cout << "Hello";
 int main() {}
-		\end{lstlisting}
-		fecske.cpp
-		\begin{lstlisting}
+	\end{lstlisting}
+	\bigskip
+	
+	\fbox{\textbf{fecske.cpp}}
+	\begin{lstlisting}
 std::ostream& o = std::cout << " World";
-		\end{lstlisting}
-		Itt nem specifikált a két globális változók inicializációs sorrendje, és ha más sorredben fordítjuk, mást ír ki.
-		
-		{\centering \texttt{g++ main.cpp fecske.cpp \quad $\not=$\quad g++ fecske.cpp main.cpp} \par}
-	\end{example}
+	\end{lstlisting}
+	Itt nem specifikált a két globális változók inicializációs sorrendje, és ha más sorredben fordítjuk, mást ír ki.
+	
+	{\centering \texttt{g++ main.cpp fecske.cpp \quad $\not=$\quad\, g++ fecske.cpp main.cpp} \par}
+	
 	\begin{note}
 		Ez utolsó példa nem jó kódnak számít, mert nem specifikált viselkedést használ ki. A program kimenete nem definiált. Ez is egy jó elrettentő példa, miért nem érdemes globális változókat használni.
+	\end{note}
+	
+	Ezen kívül számos egyéb problémát is felvetnek a globális változók: túlzott használatuk a sok paraméterrel rendelkező függvények elkerülése végett fordulhat elő, azonban gyakran így sokkal átláthatatlanabb kódot kapunk. Mivel bárhol hozzá lehet férni egy globális változóhoz, nagyon nehéz tudni, mikor hol módosul.
+	\begin{note}
+		Párhuzamos programozásnál a globális változók túl az átláthatatlanságon még sokkal több fejtörést okoznak: mi van akkor, ha két párhuzamosan futó függvény ugyanazt a változót akarja módosítani? Ennek megelőzése globális változóknál ezt rendkívül körülményes lehet.
 	\end{note}
 \end{document}
